Updated The database

--- a/Warehouse System/App.config
+++ b/Warehouse System/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-<add name="WarehouseDBEntities" connectionString="metadata=res://*/WarehouseDbModel.csdl|res://*/WarehouseDbModel.ssdl|res://*/WarehouseDbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=WarehouseDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+<add name="WarehouseDBEntities" connectionString="metadata=res://*/WarehouseDBModel.csdl|res://*/WarehouseDBModel.ssdl|res://*/WarehouseDBModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=WarehouseDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
